--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,6 +29,9 @@ font pango: System San Francisco Display 11
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Disable focus following mouse behavior
+focus_follows_mouse no
+
 # start a terminal
 bindsym $mod+Return exec kitty #i3-sensible-terminal
 
@@ -230,15 +233,12 @@ floating_minimum_size -1 x -1
 # Desktop background with output
 output LVDS-1 bg ~/Pictures/keep_on_keeping_on.jpg stretch
 
-# Autostart redshift and geoclue-2.0
+# Autostart redshift-wlroots
 exec --no-startup-id redshift
 
 # Start the clipman daemon
 exec wl-paste -p --watch clipman store --max-items=30 --histpath="~/.local/share/clipman-primary.json" 
 exec wl-paste --watch clipman store --max-items=30
-
-# Disable focus following mouse behavior
-focus_follows_mouse no
 
 ####################################################################################
 # Colors                                                                           #
