Add numlock and capslock display i3blocks

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -260,10 +260,6 @@ client.unfocused        $inactive_bg_color  $inactive_bg_color $inactive_text_co
 client.focused_inactive $inactive_bg_color  $inactive_bg_color $inactive_text_color #00ff00     $bg_color
 client.urgent           $urgent_bg_color    $urgent_bg_color   $text_color          #00ff00     $bg_color
 
-# i3blocks requirements for NUM and CAPS indicators
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-
 ####################################################################################
 # Keybindings                                                                      #
 ####################################################################################
@@ -279,6 +275,10 @@ bindsym $mod+Shift+x exec betterlockscreen --lock blur
 
 # Greenclip
 bindsym $mod+c exec rofi -show greenclip -theme onedark
+
+# i3blocks requirements for NUM and CAPS indicators
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 # PulseAudio controls
 # Change volume or toggle mute
