Add script to toggle redshift

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -275,7 +275,10 @@ bindsym $mod+c exec clipman pick -t rofi --max-items=30
 bindsym $mod+p exec clipman pick -t rofi --max-items=30 --histpath="~/.local/share/clipman-primary.json"
 
 # Firefox Developer Edition
-bindsym $mod+b exec ~/.scripts/launch-firefox-wayland.sh
+bindsym $mod+b exec $HOME/.scripts/launch-firefox-wayland.sh
+
+# Toggle redshift
+bindsym Alt+End exec $HOME/.scripts/toggle-redshift.sh
 
 # Screenshot using grim with slurp
 set $screenshot_path ~/Pictures/Screenshots/screenshot_`date +%y-%m-%d_%H:%M:%S`.png
