--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -84,7 +84,7 @@ signal=10
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 # [iface]
 # label= 
-# instance=wlp2s0
+# instance=wlp0s20f3
 # interval=10
 # separator=false
 
