--- a/.scripts/intel-undervolt.conf
+++ b/.scripts/intel-undervolt.conf
@@ -1,5 +1,6 @@
-undervolt 0 'CPU' -160
-undervolt 1 'GPU' 0
-undervolt 2 'CPU Cache' -160
-undervolt 3 'System Agent' 0
-undervolt 4 'Analog I/O' 0
+tjoffset    -5
+undervolt   0   'CPU' -175
+undervolt   1   'GPU' -120
+undervolt   2   'CPU Cache' -175
+undervolt   3   'System Agent' 0
+undervolt   4   'Analog I/O' 0
