--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -3,11 +3,11 @@ gtk-application-prefer-dark-theme=false
 gtk-button-images=1
 gtk-cursor-theme-name=capitaine-cursors
 gtk-fallback-icon-theme=ePapirus
-gtk-font-name="System San Fransisco Display 12"
+gtk-font-name=System San Fransisco Display 12
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=1
 gtk-primary-button-warps-slider=0
-gtk-theme-name=Adapta-Nokto
+gtk-theme-name=Adapta-Nokto-Eta
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-cursor-theme-size=0
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
