--- a/.scripts/systemd_units/i3lock-on-suspend@.service
+++ b/.scripts/systemd_units/i3lock-on-suspend@.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=Lock X-session of user %I when lid closed (using i3lock)
-Documentation=man:i3lock(1)
+Documentation=man:i3lock-color(1)
 Before=sleep.target
 
 [Service]
 User=%i
 Type=forking
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/betterlockscreen --lock blur
+ExecStart=/usr/bin/betterlockscreen --suspend blur
 ExecStartPost=/usr/bin/sleep 1
 
 [Install]
