Changed border width for i3 and sway

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -214,11 +214,11 @@ set $FLOAT      floating enable
 set $UNFLOAT    floating disable
 
 # Disable window title and borders for new tiling windows
-default_border pixel 3
+default_border pixel 2
 # new_window normal|pixel [<px>]
 
 # Enable window title and borders for new floating windows
-default_floating_border pixel 3
+default_floating_border pixel 2
 # new_float none
 
 # Set floating maximum and minumum sizes 
@@ -226,7 +226,7 @@ floating_maximum_size 1000 x 900
 floating_minimum_size -1 x -1
 
 # Disabling window borders
-# for_window [class="^.*"] border normal 0
+# for_window [class=".*"] border pixel 0
  
 ####################################################################################
 # Startup manager                                                                  #
