--- a/.config/i3/config
+++ b/.config/i3/config
@@ -241,6 +241,7 @@ set $urgent_text_color      #282c34
 # Start waybar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    i3bar_command i3bar -t
 	status_command i3blocks #-c ~/.config/i3blocks/config
     strip_workspace_numbers yes
 
@@ -249,6 +250,7 @@ bar {
 	mode dock
 	position top
     height 36
+    tray_padding 4
 
 	# Fonts and colors
     font pango: FantasqueSansMono Nerd Font 14
