--- a/.scripts/configs/optimus-manager.conf
+++ b/.scripts/configs/optimus-manager.conf
@@ -1,5 +1,57 @@
 [optimus]
+
+# This parameter defines the method used to power switch the Nvidia card. See the documentation
+# for a complete description of what each value does. Possible values :
+#
+# - nouveau : load the nouveau module on the Nvidia card.
+# - bbswitch : power off the card using the bbswitch module (requires the bbswitch dependency).
+# - acpi_call : try various ACPI method calls to power the card on and off (requires the acpi_call dependency)
+# - none : do not use an external module for power management. For some laptop models it's preferable to
+#           use this option in combination with pci_power_control (see below).
+#           With that option set, you can also use the scripts nvidia-enable.sh and nvidia-disable.sh to
+#           execute custom commands for power management.
 switching=none
+
+# Enable PCI power management in Intel mode.
+# This option is incompatible with acpi_call and bbswitch, so it will be ignored in those cases.
 pci_power_control=yes
+
+# Remove the Nvidia card from the PCI bus.
+# May prevent crashes caused by power switching.
+# Ignored if switching=nouveau or switching=bbswitch.
 pci_remove=yes
+
+# Reset the Nvidia card at the PCI level before reloading the nvidia module.
+# Ensures the card is in a fresh state before reloading the nvidia module.
+# May fix some switching issues. Possible values :
+#
+# - no : does not perform any reset
+# - function_level : perform a light "function-level" reset
+# - hot_reset : perform a "hot reset" of the PCI bridge. ATTENTION : this method messes with the hardware
+#         directly, please read the online documentation of optimus-manager before using it.
+#         Also, it will perform a PCI remove even if pci_remove=no.
+#
 pci_reset=no
+
+# Automatically log out the current desktop session when switching GPUs.
+# This feature is currently supported for the following DE/WM :
+# KDE Plasma, GNOME, XFCE, Deepin, i3, Openbox, AwesomeWM, bspwm
+# If this option is disabled or you use a different desktop environment,
+# GPU switching only becomes effective at the next graphical session login.
+auto_logout=yes
+
+
+[intel]
+
+# DRI version. Possible values : 2, 3
+DRI=3
+
+# Whether or not to enable modesetting for the nouveau driver.
+# Does not affect modesetting for the Intel GPU driver !
+# This option only matters if you use nouveau as the switching backend.
+modeset=yes
+
+[nvidia]
+
+# Whether or not to enable modesetting. Required for PRIME Synchronization (which prevents tearing).
+modeset=yes
