Change power management in optimus manager

--- a/.scripts/configs/optimus-manager.conf
+++ b/.scripts/configs/optimus-manager.conf
@@ -10,7 +10,7 @@
 #           use this option in combination with pci_power_control (see below).
 #           With that option set, you can also use the scripts nvidia-enable.sh and nvidia-disable.sh to
 #           execute custom commands for power management.
-switching=none
+switching=nouveau
 
 # Enable PCI power management in Intel mode.
 # This option is incompatible with acpi_call and bbswitch, so it will be ignored in those cases.
