Change systemlock on suspend unit and script files

--- a/.scripts/systemd_units/suspend@.service
+++ b/.scripts/systemd_units/suspend@.service
@@ -1,8 +1,8 @@
 [Unit]
-Description=Lock X-session of user %I when lid closed (using i3lock)
+Description=Lock session of user %I on system suspend
 Documentation=man:i3lock-color(1)
 Documentation=man:swaylock(1)
-Before=sleep.target suspend.target
+Before=sleep.target
 
 [Service]
 User=%i
@@ -10,4 +10,4 @@ Type=forking
 ExecStart=/home/%i/.scripts/systemd_scripts/lock-on-suspend.sh
 
 [Install]
-WantedBy=sleep.target suspend.target
+WantedBy=sleep.target
