--- a/.scripts/configs/optimus-manager.conf
+++ b/.scripts/configs/optimus-manager.conf
@@ -10,7 +10,7 @@
 #           use this option in combination with pci_power_control (see below).
 #           With that option set, you can also use the scripts nvidia-enable.sh and nvidia-disable.sh to
 #           execute custom commands for power management.
-switching=nouveau
+switching=bbswitch
 
 # Enable PCI power management in Intel mode.
 # This option is incompatible with acpi_call and bbswitch, so it will be ignored in those cases.
@@ -19,7 +19,7 @@ pci_power_control=yes
 # Remove the Nvidia card from the PCI bus.
 # May prevent crashes caused by power switching.
 # Ignored if switching=nouveau or switching=bbswitch.
-pci_remove=yes
+pci_remove=no
 
 # Reset the Nvidia card at the PCI level before reloading the nvidia module.
 # Ensures the card is in a fresh state before reloading the nvidia module.
