--- a/.scripts/systemd_units/user/swayidle.service
+++ b/.scripts/systemd_units/user/swayidle.service
@@ -4,13 +4,13 @@ Documentation=man:swayidle(1)
 PartOf=graphical-session.target
 
 [Service]
-User=%i
 Type=simple
 ExecStart=/usr/bin/swayidle -w \
-            timeout 300 'swaylock' \
+            timeout 300 'swaylock -f' \
             timeout 600 'swaymsg "output * dpms off"' \
                 resume 'swaymsg "output * dpms on"' \
-            before-sleep 'swaylock'
+            before-sleep 'swaylock -f'
+ExecStartPost=/usr/bin/sleep 1
 
 [Install]
 WantedBy=sway-session.target
