--- a/.config/i3/config
+++ b/.config/i3/config
@@ -252,10 +252,10 @@ set $unfocused_bg_color     #98c379
 set $inactive_bg_color      #abb2bf
 set $urgent_bg_color        #e06c75
 
-set $text_color             #0c1b21
+set $text_color             #ffffff
 set $unfocused_text_color   #858774
 set $inactive_text_color    #858774
-set $urgent_text_color      #ffffff
+set $urgent_text_color      #0c1b21
 
 # Start waybar to display a workspace bar (plus the system information i3status
 # finds out, if available)
