--- a/.config/sway/config
+++ b/.config/sway/config
@@ -180,6 +180,11 @@ set $scripts_dir $HOME/.scripts/wm_scripts
 workspace_layout tabbed
 
 ##############################################################
+# Window Title Alignment                                     #
+##############################################################
+title_align center
+
+##############################################################
 # Windows
 ##############################################################
 #
