--- a/.config/i3/config
+++ b/.config/i3/config
@@ -209,6 +209,9 @@ floating_minimum_size -1 x -1
 # Startup manager                                                                  #
 ####################################################################################
 #
+#Start polybar
+exec_always --no-startup-id $scripts_dir/launch-polybar.sh
+
 # Desktop background with feh
 exec --no-startup-id feh --bg-scale $HOME/Pictures/keep_on_keeping_on.jpg
 
@@ -264,32 +267,32 @@ set $urgent_text_color      #0c1b21
 
 # Start waybar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    i3bar_command i3bar -t
-	status_command i3blocks #-c ~/.config/i3blocks/config
-    strip_workspace_numbers yes
-
-
-	# Position and visibility for i3bar
-	mode dock
-	position top
-    height 36
-    tray_padding 4
-
-	# Fonts and colors
-    font pango: FantasqueSansMono Nerd Font 14
-    colors {
-        background #cab19200
-        separator #330066
-        statusline #fdf6e3
-        # colorclass       border                  background          text
-        focused_workspace  $border_color           $bg_color           $text_color
-        active_workspace   $unfocused_border_color $unfocused_bg_color $text_color
-        inactive_workspace $inactive_border_color  $inactive_bg_color  $inactive_text_color
-        urgent_workspace   $urgent_border_color    $urgent_bg_color    $urgent_text_color
-        #binding_mode
-    }
-}
+# bar {
+#     i3bar_command i3bar -t
+# 	status_command i3blocks #-c ~/.config/i3blocks/config
+#     strip_workspace_numbers yes
+#
+#
+# 	# Position and visibility for i3bar
+# 	mode dock
+# 	position top
+#     height 36
+#     tray_padding 4
+#
+# 	# Fonts and colors
+#     font pango: FantasqueSansMono Nerd Font 14
+#     colors {
+#         background #cab19200
+#         separator #330066
+#         statusline #fdf6e3
+#         # colorclass       border                  background          text
+#         focused_workspace  $border_color           $bg_color           $text_color
+#         active_workspace   $unfocused_border_color $unfocused_bg_color $text_color
+#         inactive_workspace $inactive_border_color  $inactive_bg_color  $inactive_text_color
+#         urgent_workspace   $urgent_border_color    $urgent_bg_color    $urgent_text_color
+#         #binding_mode
+#     }
+# }
 
 # window colors
 #                       border                  background          text                  indicator     child_border
