--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -41,7 +41,6 @@ color=#0c1b21
 [keyindicator]
 KEY=CAPS
 markup=pango
-separator=false
 interval=once
 signal=11
 HIDE_WHEN_OFF=1
@@ -98,16 +97,16 @@ signal=10
 # interval=10
 # separator=false
 
-[wifi]
-label= 
-separator=false
-instance=wlp0s20f3
-interval=10
-
-[essid]
-separator=false
-instance=wlp0s20f3
-interval=10
+# [wifi]
+# label= 
+# separator=false
+# instance=wlp0s20f3
+# interval=10
+#
+# [essid]
+# separator=false
+# instance=wlp0s20f3
+# interval=10
 
 [bandwidth]
 label= 
